// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantListEditorForm should hide grant agency type input 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      md={true}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        error={true}
        errorText="This field is required"
        fullWidth={true}
        id="grantAgencyName"
        onChange={[Function]}
        required={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={4}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        disabled={true}
        fullWidth={true}
        id="grantId"
        onChange={[Function]}
        required={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md="auto"
      sm={12}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`GrantListEditorForm should render default view 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      md={true}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        error={true}
        errorText="This field is required"
        fullWidth={true}
        id="grantAgencyName"
        onChange={[Function]}
        required={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        disabled={true}
        fullWidth={true}
        id="grantId"
        onChange={[Function]}
        required={true}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(FormControl)
        error={false}
        fullWidth={true}
        required={true}
      >
        <WithStyles(InputLabel) />
        <WithStyles(Select)
          disabled={true}
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          />
          <WithStyles(MenuItem)
            key="0"
            value="453983"
          >
            Museum
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="1"
            value="453984"
          >
            Gallery
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="2"
            value="453985"
          >
            Government
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="3"
            value="453986"
          >
            NGO
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="4"
            value="453987"
          >
            Foundation
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="5"
            value="453988"
          >
            Corporate/Industry
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="6"
            value="453989"
          >
            University
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="7"
            value="453990"
          >
            Other
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
        <Component />
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md="auto"
      sm={12}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`GrantListEditorForm should set grant agency type as a required input if agency name is set 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      md={true}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        error={false}
        errorText={false}
        fullWidth={true}
        id="grantAgencyName"
        onChange={[Function]}
        required={false}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        disabled={true}
        fullWidth={true}
        id="grantId"
        onChange={[Function]}
        required={false}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(FormControl)
        error={false}
        fullWidth={true}
        required={false}
      >
        <WithStyles(InputLabel) />
        <WithStyles(Select)
          disabled={true}
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          />
          <WithStyles(MenuItem)
            key="0"
            value="453983"
          >
            Museum
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="1"
            value="453984"
          >
            Gallery
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="2"
            value="453985"
          >
            Government
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="3"
            value="453986"
          >
            NGO
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="4"
            value="453987"
          >
            Foundation
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="5"
            value="453988"
          >
            Corporate/Industry
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="6"
            value="453989"
          >
            University
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="7"
            value="453990"
          >
            Other
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md="auto"
      sm={12}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`GrantListEditorForm should set grant agency type as a required input if agency name is set 2`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      md={true}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        error={false}
        errorText={false}
        fullWidth={true}
        id="grantAgencyName"
        onChange={[Function]}
        required={false}
        value="test"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        disabled={false}
        fullWidth={true}
        id="grantId"
        onChange={[Function]}
        required={false}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(FormControl)
        error={true}
        fullWidth={true}
        required={true}
      >
        <WithStyles(InputLabel) />
        <WithStyles(Select)
          disabled={false}
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          />
          <WithStyles(MenuItem)
            key="0"
            value="453983"
          >
            Museum
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="1"
            value="453984"
          >
            Gallery
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="2"
            value="453985"
          >
            Government
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="3"
            value="453986"
          >
            NGO
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="4"
            value="453987"
          >
            Foundation
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="5"
            value="453988"
          >
            Corporate/Industry
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="6"
            value="453989"
          >
            University
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="7"
            value="453990"
          >
            Other
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md="auto"
      sm={12}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`GrantListEditorForm should set grant agency type as a required input if agency name is set 3`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={8}
    style={
      Object {
        "marginTop": 8,
      }
    }
  >
    <WithStyles(Grid)
      item={true}
      md={true}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        error={false}
        errorText={false}
        fullWidth={true}
        id="grantAgencyName"
        onChange={[Function]}
        required={false}
        value="test"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        disabled={false}
        fullWidth={true}
        id="grantId"
        onChange={[Function]}
        required={false}
        value="1234"
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={12}
      xs={12}
    >
      <WithStyles(FormControl)
        error={true}
        fullWidth={true}
        required={true}
      >
        <WithStyles(InputLabel) />
        <WithStyles(Select)
          disabled={false}
          onChange={[Function]}
          value=""
        >
          <WithStyles(MenuItem)
            disabled={true}
            value=""
          />
          <WithStyles(MenuItem)
            key="0"
            value="453983"
          >
            Museum
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="1"
            value="453984"
          >
            Gallery
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="2"
            value="453985"
          >
            Government
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="3"
            value="453986"
          >
            NGO
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="4"
            value="453987"
          >
            Foundation
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="5"
            value="453988"
          >
            Corporate/Industry
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="6"
            value="453989"
          >
            University
          </WithStyles(MenuItem)>
          <WithStyles(MenuItem)
            key="7"
            value="453990"
          >
            Other
          </WithStyles(MenuItem)>
        </WithStyles(Select)>
        <WithStyles(FormHelperText)
          error={true}
        >
          This field is required
        </WithStyles(FormHelperText)>
      </WithStyles(FormControl)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md="auto"
      sm={12}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;
